--- a/Launcher/Launcher/Views/LauncherView.xaml
+++ b/Launcher/Launcher/Views/LauncherView.xaml
@@ -1,64 +1,70 @@
 ﻿<UserControl x:Class="Launcher.Views.LauncherView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls"
-             mc:Ignorable="d" 
+             mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
-    <Grid x:Name="MainGrid" ScrollViewer.HorizontalScrollBarVisibility="Hidden" ScrollViewer.VerticalScrollBarVisibility="Hidden">
+    <Grid x:Name="MainGrid" ScrollViewer.HorizontalScrollBarVisibility="Hidden"
+          ScrollViewer.VerticalScrollBarVisibility="Hidden">
         <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
-            <RowDefinition/>
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
+            <RowDefinition />
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
+            <ColumnDefinition />
         </Grid.ColumnDefinitions>
         <Grid x:Name="grid" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="7">
             <Grid.Background>
                 <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="#FFFAFBFA" Offset="0.008"/>
-                    <GradientStop Color="{DynamicResource AccentColor}" Offset="0.008"/>
+                    <GradientStop Color="#FFFAFBFA" Offset="0.008" />
+                    <GradientStop Color="{DynamicResource AccentColor}" Offset="0.008" />
                 </LinearGradientBrush>
             </Grid.Background>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
+                <ColumnDefinition />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
+                <RowDefinition />
+                <RowDefinition />
             </Grid.RowDefinitions>
-            <Label Content="ТЧ-1" Foreground="Yellow" FontSize="28" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" HorizontalAlignment="Center" VerticalAlignment="Center" FontStyle="Italic" FontWeight="Bold" />
-            <Label x:Name="DateTimeLabel"  HorizontalAlignment="Right" Grid.Column="6" Grid.Row="0" Grid.RowSpan="2" HorizontalContentAlignment="Right" Foreground="White" FontSize="17" VerticalAlignment="Bottom"/>
-            <Label HorizontalAlignment="Right" Content="Виктор Викторович"  Grid.Column="6" Grid.Row="0" Foreground="White" HorizontalContentAlignment="Right" FontSize="15" />
-            <TextBlock x:Name="TextBlockAny" Grid.Column="7" Grid.RowSpan="2"  TextWrapping="WrapWithOverflow" Foreground="White" FontSize="15" HorizontalAlignment="Right"/>
-            <TextBox x:Name="TextBoxSearch" controls:TextboxHelper.Watermark="Поиск" Grid.Row="0" Grid.Column="1" Grid.ColumnSpan="5" Grid.RowSpan="2" VerticalAlignment="Center"
+            <Label Content="ТЧ-1" Foreground="Yellow" FontSize="28" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2"
+                   HorizontalAlignment="Center" VerticalAlignment="Center" FontStyle="Italic" FontWeight="Bold" />
+            <Label x:Name="DateTimeLabel" HorizontalAlignment="Right" Grid.Column="6" Grid.Row="0" Grid.RowSpan="2"
+                   HorizontalContentAlignment="Right" Foreground="White" FontSize="17" VerticalAlignment="Bottom" />
+            <Label HorizontalAlignment="Right" Content="Виктор Викторович" Grid.Column="6" Grid.Row="0"
+                   Foreground="White" HorizontalContentAlignment="Right" FontSize="15" />
+            <TextBlock x:Name="TextBlockAny" Grid.Column="7" Grid.RowSpan="2" TextWrapping="WrapWithOverflow"
+                       Foreground="White" FontSize="15" HorizontalAlignment="Right" />
+            <TextBox x:Name="TextBoxSearch" controls:TextboxHelper.Watermark="Поиск" Grid.Row="0" Grid.Column="1"
+                     Grid.ColumnSpan="5" Grid.RowSpan="2" VerticalAlignment="Center"
                      FontSize="17">
                 <TextBox.Style>
-                    <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource SearchMetroTextBox}"/>
+                    <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource SearchMetroTextBox}" />
                 </TextBox.Style>
             </TextBox>
             <Popup Width="{Binding RelativeSource={RelativeSource Self}, Path=PlacementTarget.ActualWidth}"
-                    Placement="Bottom" PlacementTarget="{Binding ElementName=TextBoxSearch}"   >
+                   Placement="Bottom" PlacementTarget="{Binding ElementName=TextBoxSearch}">
                 <Popup.Style>
                     <Style TargetType="{x:Type Popup}">
                         <Setter Property="IsOpen" Value="False" />
@@ -70,17 +76,18 @@
                     </Style>
                 </Popup.Style>
 
-                <ListBox x:Name="ListBoxSearch" Background="{DynamicResource AccentColorBrush}" ScrollViewer.VerticalScrollBarVisibility="Hidden" FontSize="18">
+                <ListBox x:Name="ListBoxSearch" Background="{DynamicResource AccentColorBrush}"
+                         ScrollViewer.VerticalScrollBarVisibility="Hidden" FontSize="18">
                     <ListBox.ItemContainerStyle>
                         <Style TargetType="ListBoxItem">
-                            <Setter Property="Background" Value="WhiteSmoke"/>
-                            <Setter Property="Margin" Value="1"/>
-                            <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Hidden"/>
-                            <Setter Property="ScrollViewer.VerticalScrollBarVisibility"   Value="Hidden"/>
-                            <Setter Property="BorderThickness" Value="1,0,0,0"/>
+                            <Setter Property="Background" Value="WhiteSmoke" />
+                            <Setter Property="Margin" Value="1" />
+                            <Setter Property="ScrollViewer.HorizontalScrollBarVisibility" Value="Hidden" />
+                            <Setter Property="ScrollViewer.VerticalScrollBarVisibility" Value="Hidden" />
+                            <Setter Property="BorderThickness" Value="1,0,0,0" />
                             <Style.Triggers>
                                 <Trigger Property="IsMouseOver" Value="True">
-                                    <Setter Property="Foreground" Value="White"/>
+                                    <Setter Property="Foreground" Value="White" />
                                 </Trigger>
                             </Style.Triggers>
                         </Style>
@@ -88,7 +95,20 @@
                 </ListBox>
             </Popup>
         </Grid>
-        <ListBox x:Name="CurrentModuleState" Grid.Row="1" Grid.RowSpan="7" Grid.Column="0" Background="{DynamicResource AccentColorBrush}"></ListBox>
-        <ContentControl Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="6" Grid.RowSpan="7" x:Name="ActiveItem"/>
+        <ListBox x:Name="CurrentModuleState" Grid.Row="1" Grid.RowSpan="7" Grid.Column="0"
+                 Background="{DynamicResource AccentColorBrush}" />
+        <ContentControl Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="6" Grid.RowSpan="7" x:Name="ActiveItem" />
+        <ListBox x:Name="ModulesListBox" Grid.Row="1" Grid.RowSpan="7" Grid.Column="0"
+                 Background="{DynamicResource AccentColorBrush}">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel>
+
+                            <TextBlock x:Name="NameModule" Text="{Binding Name}" />
+                        
+                    </StackPanel>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
     </Grid>
 </UserControl>
