--- a/Launcher/Launcher.Core/UserControls/SquareButtonWithRoundedBorders.xaml
+++ b/Launcher/Launcher.Core/UserControls/SquareButtonWithRoundedBorders.xaml
@@ -16,14 +16,46 @@
             <ColumnDefinition></ColumnDefinition>
             <ColumnDefinition></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <Border x:Name="FirstBorder" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" Grid.RowSpan="3" BorderBrush="Green" BorderThickness="3" HorizontalAlignment="Stretch" Margin="2" VerticalAlignment="Stretch" CornerRadius="9" >
+        <Border x:Name="FirstBorder" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" Grid.RowSpan="3" BorderBrush="Green" BorderThickness="3" HorizontalAlignment="Stretch" Margin="2" VerticalAlignment="Stretch" CornerRadius="9">
+            
             <Border x:Name="SecondBorder" BorderBrush="Yellow" BorderThickness="3" Margin="1" CornerRadius="9" Background="DarkGreen">
-                <!--<Border.Style>
-                    <Style TargetType="{x:}"
-                </Border.Style>-->
+                <Border.Style>
+                    <Style TargetType="{x:Type Border}">
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="DarkGoldenrod"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Border.Style>
+                <Grid>
+                    <Grid.Style>
+                        <Style TargetType="{x:Type Grid}">
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background" Value="DarkGoldenrod"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Grid.Style>
+                    <Grid.RowDefinitions>
+                        <RowDefinition></RowDefinition>
+                        <RowDefinition></RowDefinition>
+                        <RowDefinition></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                        <ColumnDefinition></ColumnDefinition>
+                    </Grid.ColumnDefinitions>
+
+                    <TextBlock x:Name="ContentTextBlock" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" Grid.RowSpan="3" HorizontalAlignment="Center" VerticalAlignment="Center" Text="Этап 1" Foreground="White" FontSize="22" Background="Transparent"/>
+
+                </Grid> 
             </Border>
+            
         </Border>
-        <TextBlock x:Name="ContentTextBlock" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" Grid.RowSpan="3" HorizontalAlignment="Center" VerticalAlignment="Center" Text="Этап 1" Foreground="White" FontSize="22">
+        
            
             <!--<TextBlock.Style>
                 <Style TargetType="TextBlock">
@@ -34,6 +66,5 @@
                     </Style.Triggers>  
                 </Style>
             </TextBlock.Style>-->
-        </TextBlock>
     </Grid>
 </UserControl>
