--- a/Launcher/Launcher.Module.Document/Views/MainDocView.xaml
+++ b/Launcher/Launcher.Module.Document/Views/MainDocView.xaml
@@ -3,9 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
+             mc:Ignorable="d" Height="390" Width="596">
     <Grid Background="Green">
-        <Label> Hey from Module Documents</Label>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="129"></ColumnDefinition>
+            <ColumnDefinition Width="*"></ColumnDefinition>
+        </Grid.ColumnDefinitions>
+        <ListBox x:Name="CategoryList"></ListBox>
+        <ContentControl Grid.Column="1" x:Name="Items"></ContentControl>
     </Grid>
 </UserControl>
