--- a/Launcher/Launcher.Core/UserControls/SquareButtonWithRoundedBorders.xaml
+++ b/Launcher/Launcher.Core/UserControls/SquareButtonWithRoundedBorders.xaml
@@ -7,16 +7,16 @@
              d:DesignHeight="300" d:DesignWidth="300">
     <Border CornerRadius="11" BorderThickness="2" >
         <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-            <RowDefinition></RowDefinition>
-        </Grid.RowDefinitions>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-            <ColumnDefinition></ColumnDefinition>
-        </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
             <Border x:Name="FirstBorder" Grid.Column="0" Grid.Row="0" Grid.ColumnSpan="3" Grid.RowSpan="3" BorderBrush="Green" BorderThickness="3" HorizontalAlignment="Stretch" Margin="1" VerticalAlignment="Stretch" CornerRadius="11">
 
                 <Border x:Name="SecondBorder" BorderBrush="Yellow" BorderThickness="3" Margin="1" CornerRadius="3" Background="DarkGreen">
@@ -39,7 +39,7 @@
                                 </Style.Triggers>
                             </Style>
                         </Grid.Style>
-                        <TextBlock x:Name="ContentTextBlock" HorizontalAlignment="Center" VerticalAlignment="Center" Text="Этап 1" Foreground="White" FontSize="22" Background="Transparent"/>
+                        <TextBlock x:Name="ContentTextBlock" HorizontalAlignment="Center" VerticalAlignment="Center"/>
 
                     </Grid>
                 </Border>
