--- a/Launcher/Launcher.Module.Document/Views/MainDocView.xaml
+++ b/Launcher/Launcher.Module.Document/Views/MainDocView.xaml
@@ -3,7 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             mc:Ignorable="d" Height="390" Width="596">
+             mc:Ignorable="d" 
+             d:DesignWidth="500" d:DesignHeight="600">
     <Grid Background="Green">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="129"></ColumnDefinition>
