--- a/Launcher/Launcher.Module.Document/Views/MainDocView.xaml
+++ b/Launcher/Launcher.Module.Document/Views/MainDocView.xaml
@@ -3,13 +3,15 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:gui="Laucnher.Core.Gui.Style"
              mc:Ignorable="d" d:DesignWidth="500" d:DesignHeight="600">
     <Grid Background="Green">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="129"></ColumnDefinition>
             <ColumnDefinition Width="*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
-        <ListBox x:Name="CategoryList"></ListBox>
+        <ListBox x:Name="CategoryList" ItemContainerStyle="{StaticResource ListBoxItemSem}">
+        </ListBox>
         <ContentControl Grid.Column="1" x:Name="ActiveItem"></ContentControl>
     </Grid>
 </UserControl>
