--- a/Launcher/Launcher/App.xaml
+++ b/Launcher/Launcher/App.xaml
@@ -12,9 +12,9 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Fonts.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/Launcher.Core.Gui;component/Icons.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/Launcher.Core.Gui;component/Style.xaml" />
-                <ResourceDictionary Source="pack://application:,,,/Launcher.Core.Gui;component/Style/ListBox.xaml" />
+                <ResourceDictionary Source="/Launcher.Core.Gui;component/Icons.xaml" />
+                <ResourceDictionary Source="/Launcher.Core.Gui;component/Style.xaml" />
+                <ResourceDictionary Source="/Launcher.Core.Gui;component/Style/ListBox.xaml" />
                 <!--<ResourceDictionary Source="/Launcher.Core/UserControls/SquareButtonWithRoundedBorders.xaml"/>-->
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
