--- a/Launcher/Launcher/Views/LauncherView.xaml
+++ b/Launcher/Launcher/Views/LauncherView.xaml
@@ -59,14 +59,14 @@
                        Foreground="White" FontSize="15" HorizontalAlignment="Right" />
             <TextBox x:Name="TextBoxSearch" controls:TextboxHelper.Watermark="Поиск" Grid.Row="0" Grid.Column="1"
                      Grid.ColumnSpan="5" Grid.RowSpan="2" VerticalAlignment="Center"
-                     FontSize="17">
+                     FontSize="17" cal:Message.Attach="[Event PreviewMouseDown] = [Action Search]">
                 <TextBox.Style>
                     <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource SearchMetroTextBox}" />
                 </TextBox.Style>
             </TextBox>
             <Popup Width="{Binding RelativeSource={RelativeSource Self}, Path=PlacementTarget.ActualWidth}"
                    Placement="Bottom" PlacementTarget="{Binding ElementName=TextBoxSearch}" 
-                   cal:Message.Attach="[Event Opened] = [Action Search]">
+                   >
                 
                 <Popup.Style>
                     <Style TargetType="{x:Type Popup}">
@@ -105,6 +105,7 @@
                 </ListBox>
             </Popup>
         </Grid>
+        
         <ListBox x:Name="CurrentModuleState" Grid.Row="1" Grid.RowSpan="7" Grid.Column="0"
                  Background="{DynamicResource AccentColorBrush}" />
         <ContentControl Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="6" Grid.RowSpan="7" x:Name="ActiveItem" />
